Fix the stretched service icons, as well as the clarity issue among the services, by pairing them vertically with the checkboxes and using some CSS love.

--- a/src/skin/firestatus.css
+++ b/src/skin/firestatus.css
@@ -17,12 +17,17 @@
 #firestatusContainer {
   border-top: 1px solid #A8A8A8;
   border-bottom: none;
-  min-width: 1px;
   padding: 0 0 0 0;
 }
 
 #statusText {
-	font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
+  font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
+}
+
+#statusText[focused="true"] {
+  outline: 2px solid #4A8BC7;
+  outline-offset: -2px;
+  -moz-outline-radius: 11px;
 }
 
 #charcount {
@@ -31,24 +36,26 @@
 	width: 24px;
 }
 
+#urlGroup {
+	padding-right: 20px;
+}
 #twitter-icon {
 	list-style-image: url("chrome://firestatus/skin/twitter.png");
-	padding-right: 8px;
+	padding: 4px 4px;
 }
 
 #friendfeed-icon {
 	list-style-image: url("chrome://firestatus/skin/friendfeed.png");
-	padding-right: 8px;
+	padding: 4px 4px;
 }
 
 #facebook-icon {
 	list-style-image: url("chrome://firestatus/skin/facebook.png");
-	padding-right: 8px;
+	padding: 4px 4px;
 }
 
 #status-close {
   -moz-appearance: none;
-  padding-right: 4px;
   list-style-image: url("chrome://firestatus/skin/close.png");
   border: none;
   background-image: none !important;
@@ -75,6 +82,10 @@
 #status-send {
   border: 1px solid #5F5F5F;
   -moz-border-radius: 10px;
-  margin: 0 4px 1px 4px;
-  padding: 0 3px;
+  margin: 0 4px 1px 20px;
+  padding: 0 8px;
+}
+
+#status-send:hover {
+  border-color: #00FF00;
 }
